[gd_scene load_steps=53 format=3 uid="uid://dkwppr0q5chdh"]

[ext_resource type="Texture2D" uid="uid://dibc87bycqq1t" path="res://assets/sprites/Skeleton Attack.png" id="1_81u3t"]
[ext_resource type="Script" uid="uid://cjw0xxp1m4jke" path="res://script/skeleton.gd" id="1_vd5x3"]
[ext_resource type="Texture2D" uid="uid://cnnqj1es03xtr" path="res://assets/sprites/Skeleton Walk.png" id="2_vd5x3"]
[ext_resource type="PackedScene" uid="uid://dfbvlm4t6fxp7" path="res://Scenes/kill_zone.tscn" id="3_vd5x3"]
[ext_resource type="Texture2D" uid="uid://dhw3ptf8a6sw4" path="res://assets/sprites/Skeleton Idle.png" id="4_pegji"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pegji"]
atlas = ExtResource("1_81u3t")
region = Rect2(0, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_5abox"]
atlas = ExtResource("1_81u3t")
region = Rect2(43, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8sxu"]
atlas = ExtResource("1_81u3t")
region = Rect2(86, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks230"]
atlas = ExtResource("1_81u3t")
region = Rect2(129, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_shq1q"]
atlas = ExtResource("1_81u3t")
region = Rect2(172, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbfmp"]
atlas = ExtResource("1_81u3t")
region = Rect2(215, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1wii"]
atlas = ExtResource("1_81u3t")
region = Rect2(258, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw4xn"]
atlas = ExtResource("1_81u3t")
region = Rect2(301, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_clg8n"]
atlas = ExtResource("1_81u3t")
region = Rect2(344, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxjam"]
atlas = ExtResource("1_81u3t")
region = Rect2(387, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4moy"]
atlas = ExtResource("1_81u3t")
region = Rect2(430, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdwqs"]
atlas = ExtResource("1_81u3t")
region = Rect2(473, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6q7w"]
atlas = ExtResource("1_81u3t")
region = Rect2(516, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_anwrq"]
atlas = ExtResource("1_81u3t")
region = Rect2(559, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yfbv"]
atlas = ExtResource("1_81u3t")
region = Rect2(602, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcsoq"]
atlas = ExtResource("1_81u3t")
region = Rect2(645, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt1qk"]
atlas = ExtResource("1_81u3t")
region = Rect2(688, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlyal"]
atlas = ExtResource("1_81u3t")
region = Rect2(731, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_uebny"]
atlas = ExtResource("2_vd5x3")
region = Rect2(0, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf6qe"]
atlas = ExtResource("2_vd5x3")
region = Rect2(22, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbdh"]
atlas = ExtResource("2_vd5x3")
region = Rect2(44, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_di62f"]
atlas = ExtResource("2_vd5x3")
region = Rect2(66, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjh88"]
atlas = ExtResource("2_vd5x3")
region = Rect2(88, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfcpp"]
atlas = ExtResource("2_vd5x3")
region = Rect2(110, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_oelfx"]
atlas = ExtResource("2_vd5x3")
region = Rect2(132, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1o88"]
atlas = ExtResource("2_vd5x3")
region = Rect2(154, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhll6"]
atlas = ExtResource("2_vd5x3")
region = Rect2(176, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs872"]
atlas = ExtResource("2_vd5x3")
region = Rect2(198, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_si4ap"]
atlas = ExtResource("2_vd5x3")
region = Rect2(220, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7hgc"]
atlas = ExtResource("2_vd5x3")
region = Rect2(242, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_06y4e"]
atlas = ExtResource("2_vd5x3")
region = Rect2(264, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqvih"]
atlas = ExtResource("4_pegji")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjfp6"]
atlas = ExtResource("4_pegji")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6yni"]
atlas = ExtResource("4_pegji")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbn8f"]
atlas = ExtResource("4_pegji")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_trmo5"]
atlas = ExtResource("4_pegji")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6aie"]
atlas = ExtResource("4_pegji")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3huv"]
atlas = ExtResource("4_pegji")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytwjw"]
atlas = ExtResource("4_pegji")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rxtf"]
atlas = ExtResource("4_pegji")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v28h"]
atlas = ExtResource("4_pegji")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c33h"]
atlas = ExtResource("4_pegji")
region = Rect2(240, 0, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fqvih"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pegji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5abox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8sxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks230")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shq1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbfmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1wii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw4xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clg8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxjam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4moy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdwqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6q7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anwrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yfbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt1qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlyal")
}],
"loop": false,
"name": &"Attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uebny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf6qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di62f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjh88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfcpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oelfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1o88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhll6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs872")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si4ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7hgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06y4e")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqvih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjfp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6yni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbn8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trmo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6aie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3huv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytwjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rxtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v28h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c33h")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vd5x3"]
size = Vector2(10, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_vd5x3"]
radius = 79.025314

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pegji"]
size = Vector2(62, 30.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5abox"]
size = Vector2(87, 30.5)

[node name="Skeleton" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_vd5x3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5, -17)
sprite_frames = SubResource("SpriteFrames_fqvih")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -13)
shape = SubResource("RectangleShape2D_vd5x3")

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_vd5x3")

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(3, -15.75)
shape = SubResource("RectangleShape2D_pegji")

[node name="KillZone" parent="." instance=ExtResource("3_vd5x3")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(3.5, -15.75)
shape = SubResource("RectangleShape2D_5abox")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
